<resources>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_plus">+</string>
    <string name="button_min">-</string>
    <string name="button_mul">*</string>
    <string name="button_dvi">÷</string>
    <string name="button_dot">.</string>
    <string name="button_del">delete</string>
    <string name="button_equ">=</string>
    <string name="button_double0">00</string>
    <string name="button_blk"> </string>
    <string name="button_INV">inv</string>
    <string name="button_RAD">rad</string>
    <string name="button_pre">%</string>
    <string name="button_sin">sin</string>
    <string name="button_cos">cos</string>
    <string name="button_tan">tan</string>
    <string name="button_ln">ln</string>
    <string name="button_log">log</string>
    <string name="button_fact">!</string>
    <string name="button_pi">π</string>
    <string name="button_e">e</string>
    <string name="button_invo">^</string>
    <string name="button_lb">(</string>
    <string name="button_rb">)</string>
    <string name="button_squ">√</string>
    <string name="button_clear">C</string>
    <string name="button_deg">deg</string>
    <string name="mode_simple">Simple Mode</string>
    <string name="mode_complex">Complex Mode</string>
    <string name="History">History</string>
    <string name="app_name">Quiz</string>
</resources>