<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <include
        android:id="@+id/upper"
        layout="@layout/formula_and_result"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/btn_lb"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_lb"/>

            <Button
                android:id="@+id/btn_7"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_7"></Button>

            <Button
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/button_4"
                android:layout_weight="1">
            </Button>

            <Button
                android:id="@+id/btn_1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_1">
            </Button>

            <Button
                android:id="@+id/btn_0"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_0">
            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/btn_rb"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_rb"/>

            <Button
                android:id="@+id/btn_8"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_8"></Button>

            <Button
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/button_5"
                android:layout_weight="1">

            </Button>

            <Button
                android:id="@+id/btn_2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_2">
            </Button>

            <Button
                android:id="@+id/btn_dot"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_dot">
            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/btn_del"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_del">
            </Button>
            <Button
                android:id="@+id/btn_9"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_9">

            </Button>

            <Button
                android:id="@+id/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/button_6"
                android:layout_weight="1">

            </Button>

            <Button
                android:id="@+id/btn_3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_3">
            </Button>

            <Button
                android:id="@+id/btn_equ"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_equ">
            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_clear"></Button>

            <Button
                android:id="@+id/btn_dvi"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_dvi">

            </Button>

            <Button
                android:id="@+id/btn_mul"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/button_mul"
                android:layout_weight="1">

            </Button>

            <Button
                android:id="@+id/btn_min"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_min">
            </Button>

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_plus">
            </Button>



        </LinearLayout>


    </LinearLayout>

</LinearLayout>